[package]
name = "term-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
futures-util = { version = "0.3.30", default-features = false }
portable-pty = "0.8.1"
tokio = { version = "1.39.1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.23.1"
tracing = "0.1.40"
tracing-subscriber = "0.3"
